--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+.groceries{
+  font-family: "Montserrat";
+  font-size: 1rem;
+}
+h1{
+  text-align: center;
+  font-family: 'Oswald';
+}
+.form{
+  padding: 10%;
+  text-align: center;
+}
 .App {
   text-align: center;
 }
